--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,12 @@ path = "src/benches/mod.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ethkey = "0.3.1"
 fancy-regex = "0.11.0"
 hex = "0.4.3"
+lazy_static = "1.4.0"
+libsecp256k1 = "0.7.1"
+rand = "0.8.5"
 regex = "1.8.3"
 secp256k1 = "0.27.0"
 sha3 = "0.10.8"
