--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ web3 = "0.19.0"
 num-bigint = { version = "0.4.3", features = ["rand"] }
 num-traits = "0.2.15"
 once_cell = "1.18.0"
+postgres = "0.19.5"
 
 [dev-dependencies]
 criterion = "0.5.1"
