--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "address-hunter"
+name = "superluminal-vanity"
 version = "0.1.0"
 edition = "2021"
 [[bench]]
@@ -27,6 +27,7 @@ num-bigint = { version = "0.4.3", features = ["rand"] }
 num-traits = "0.2.15"
 once_cell = "1.18.0"
 postgres = "0.19.5"
+dotenv = "0.15.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
