--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ num-traits = "0.2.15"
 once_cell = "1.18.0"
 postgres = "0.19.5"
 dotenv = "0.15.0"
+rayon = "1.7.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
