--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ once_cell = "1.18.0"
 postgres = "0.19.5"
 dotenv = "0.15.0"
 rayon = "1.7.0"
+ethaddr = "0.1.2"
+eth_checksum = "0.1.2"
 
 [dev-dependencies]
 criterion = "0.5.1"
