--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ dotenv = "0.15.0"
 rayon = "1.7.0"
 ethaddr = "0.1.2"
 eth_checksum = "0.1.2"
+ordered-float =  { version = "3.9.1", default-features = false }
 
 [dev-dependencies]
 criterion = "0.5.1"
