--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ rayon = "1.7.0"
 ethaddr = "0.1.2"
 eth_checksum = "0.1.2"
 ordered-float =  { version = "3.9.1", default-features = false }
+substrate-subxt = "0.16.0"
+sp-core = "24.0.0"
+bs58 = "0.5.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
