--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ ordered-float =  { version = "3.9.1", default-features = false }
 substrate-subxt = "0.16.0"
 sp-core = "24.0.0"
 bs58 = "0.5.0"
+bip39 = "2.0.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
