--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ substrate-subxt = "0.16.0"
 sp-core = "24.0.0"
 bs58 = "0.5.0"
 bip39 = "2.0.0"
+bitcoin_hashes = "0.13.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
